--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
 </head>
 <body>
-    my first assi</body>
+    <img src="tjp.png" alt="tjp-logo">
+
+    <h1>The Just Projects</h1>
+    <p>We learn by doing</p>
+    <hr>
+    <h2>What you stand to gain</h2>
+    <ol>
+        <li>Solid frontend developer skills.</li>
+        <li>Learn collaboration with a team.</li>
+        <li>Join a helpful tech community.</li>
+        <li>Accelerate progress due to guided paths.</li>
+    </ol>
+    <hr>
+    <p>Before we start, you may want to checkout more <a href="about.html">About Us.</a> </p>
+    <p>Done? Then create an account or login to your account.</p>
+    <button>Get Started</button>
+    <button>Sign in Now</button>
+</body>
 </html>
