--- a/about.html
+++ b/about.html
@@ -7,6 +7,22 @@
     <title>About Us Page</title>
 </head>
 <body>
-    
+   <img src="tjp.png" alt="tjp-logo"> 
+   <h1>About Us - The Just Projects</h1>
+   <p>We learn by doing</p>
+   <hr>
+   <h2>What are some suggestions from The Just Projects?</h2>
+   <ol>
+    <li>Interact with your colleagues and don't miss team discussions.</li>
+    <li>Always feel free to ask your mentors for help when stuck.</li>
+    <li>Get confident and improve on your googling skills.</li>
+    <li>Turn on slack notifications so you don't miss important information.</li>
+   </ol>
+   <hr>
+   <p>Do you want to go back to the <a href="index.html">Home Page?</a></p>
+   <p>No? Then you can go on and sign up or log in.</p>
+   <button>Get Started</button>
+   <button>Sign In Now</button>
+   
 </body>
 </html>
