--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
    <p>We learn by doing</p>
    <hr>
    <h2>What are some suggestions from The Just Projects?</h2>
-   <ol type="a">
+   <ol type="i">
     <li>Interact with your colleagues and don't miss team discussions.</li>
     <li>Always feel free to ask your mentors for help when stuck.</li>
     <li>Get confident and improve on your googling skills.</li>
