--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>We learn by doing</p>
     <hr>
     <h2>What you stand to gain</h2>
-    <ol type="">
+    <ol type="i">
         
         <li>Solid frontend developer skills.</li>
         <li>Learn collaboration with a team.</li>
