--- a/about.html
+++ b/about.html
@@ -9,28 +9,38 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 
-<style>
+<link rel="stylesheet" href="style.css">
     * {font-family: 'Courgette', cursive;}
 </style>
 
 </head>
 <body>
-   <img src="tjp.png" alt="tjp-logo"> 
-   <h1>About Us - The Just Projects</h1>
-   <p>We learn by doing</p>
-   <hr>
-   <h2>What are some suggestions from The Just Projects?</h2>
-   <ol type="a">
-    <li>Interact with your colleagues and don't miss team discussions.</li>
-    <li>Always feel free to ask your mentors for help when stuck.</li>
-    <li>Get confident and improve on your googling skills.</li>
-    <li>Turn on slack notifications so you don't miss important information.</li>
-   </ol>
-   <hr>
-   <p>Do you want to go back to the <a href="index.html">Home Page?</a></p>
-   <p>No? Then you can go on and sign up or log in.</p>
-   <button>Get Started</button>
-   <button>Sign In Now</button>
-   
+    <section>
+    <div class="top-div">
+        <img src="tjp.png" alt="tjp-logo">
+
+        <h1>About Us - The Just Projects</h1>
+        <p>We learn by doing</p>
+    </div>
+    <hr>
+    <div class="middle-div">
+        <h2>What are some suggestions from The Just Projects?</h2>
+        <ol type="a">
+            <li>Interact with your colleagues and don't miss team discussions.</li>
+            <li>Always feel free to ask your mentors for help when stuck.</li>
+            <li>Get confident and improve on your googling skills.</li>
+            <li>Turn on slack notifications so you don't miss important information.</li>
+             </ol>
+    </div>
+    <hr>  
+             <div class="bottom-div">
+                <p>Do you want to go back to the <a href="index.html">Home Page?</a></p>
+                <p>No? Then you can go on and sign up or log in.</p>
+                <button>Get Started</button>
+                <button>Sign In Now</button>
+             </div>
+    </section>
+    
+  
 </body>
 </html>
