--- a/index.html
+++ b/index.html
@@ -9,29 +9,36 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 
-<style>
-    * {font-family: 'Courgette', cursive;}
-</style>
+<link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
-    <img src="tjp.png" alt="tjp-logo">
+    <section>
+        <div class="top-div">
+            <img src="tjp.png" alt="tjp-logo">
 
-    <h1>The Just Projects</h1>
-    <p>We learn by doing</p>
-    <hr>
-    <h2>What you stand to gain</h2>
-    <ol type="i">
-        
-        <li>Solid frontend developer skills.</li>
-        <li>Learn collaboration with a team.</li>
-        <li>Join a helpful tech community.</li>
-        <li>Accelerate progress due to guided paths.</li>
-    </ol>
-    <hr>
-    <p>Before we start, you may want to checkout more <a href="about.html">About Us.</a> </p>
-    <p>Done? Then create an account or login to your account.</p>
-    <button>Get Started</button>
-    <button>Sign in Now</button>
+        <h1>The Just Projects</h1>
+        <p>We learn by doing</p>
+        </div>
+        <hr>
+        <div class="middle-div">
+            <h2>What you stand to gain</h2>
+            <ol type="i">
+                
+                <li>Solid frontend developer skills.</li>
+                <li>Learn collaboration with a team.</li>
+                <li>Join a helpful tech community.</li>
+                <li>Accelerate progress due to guided paths.</li>
+            </ol>
+        </div>        
+        <hr>
+        <div class="bottom-div">
+            <p>Before we start, you may want to checkout more <a href="about.html">About Us.</a> </p>
+            <p>Done? Then create an account or login to your account.</p>
+            <button>Get Started</button>
+            <button>Sign in Now</button>
+        </div>
+    </section>
+   
 </body>
 </html>
