--- a/about.html
+++ b/about.html
@@ -9,12 +9,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="assignstyles.css">
 
     
 </style>
 
 </head>
+
 <body>
     <section>
     <div class="top-div">
