--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@ DOCTYPE <html>
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>introduction to <table></table>
-        <link rel="stylesheet" href="index.html"
+        <link rel="stylesheet" href="about.html"
 </head>
 <body>
     <h1>student data</h1>
