--- a/table.html
+++ b/table.html
@@ -1,14 +1,14 @@
-DOCTYPE <html>
-    <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>introduction to <table></table>
-        <link rel="stylesheet" href="about.html"
+    <title><table></table>
+        <link rel="stylesheet" href="aboutstyles.css">
 </head>
 <body>
-    <h1>student data</h1>
+    <h1>list of students</h1>
 
     <table>
         <thead>
@@ -16,6 +16,7 @@ DOCTYPE <html>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Age</th>
+                 
             </tr>
         </thead>
 
@@ -24,8 +25,71 @@ DOCTYPE <html>
             <tr>
                 <td>Yvonne</td>
                 <td>Johnson</td>
-
+                <td>24</td>
             </tr>
+
+            <td>
+
+                <td>Femi</td>
+                <td>Eyiomo</td>
+                <td>32</td>
+            </td>
+
+            <td>
+
+                <td>Busayo</td>
+                <td>Ajayi</td>
+                <td>41</td>
+            </td>
+
+            <td>
+
+                <td>Abiodun</td>
+                <td>Abonde</td>
+                <td>20</td>
+            </td>
+
+            <td>
+
+                <td>Hakeem</td>
+                <td>Bala</td>
+                <td>56</td>
+            </td>
+
+            <td>
+
+                <td>Taiwo</td>
+                <td>Mohammed/td>
+                <td56></td>
+            </td>
+
+            <td>
+
+                <td>Chijioke</td>
+                <td>Epundu</td>
+                <td>30</td>
+            </td>
+
+            <td>
+
+                <td>Obinna</td>
+                <td>Okoro</td>
+                <td>28</td>
+            </td>
+
+            <td>
+
+                <td>Kafayat</td>
+                <td>Abdul</td>
+                <td>66</td>
+            </td>
+
+            <td>
+                <td>Nana</td>
+                <td>Michael</td>
+                <td>80</td>
+            </td>
+
         </tbody>
         <tfoot></tfoot>
     </table>
