--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><table></table>
+    <title>table</title>
         <link rel="stylesheet" href="tablestyles.css">
 </head>
 <body>
@@ -28,67 +28,66 @@
                 <td>24</td>
             </tr>
 
-            <td>
+            <tr>
 
                 <td>Femi</td>
                 <td>Eyiomo</td>
                 <td>32</td>
-            </td>
+            </tr>
 
-            <td>
+            <tr>
 
                 <td>Busayo</td>
                 <td>Ajayi</td>
                 <td>41</td>
-            </td>
+            </tr>
 
-            <td>
+            <tr>
 
                 <td>Abiodun</td>
                 <td>Abonde</td>
                 <td>20</td>
-            </td>
+            </tr>
 
-            <td>
+            <tr>
 
                 <td>Hakeem</td>
                 <td>Bala</td>
                 <td>56</td>
-            </td>
+            </tr>
 
-            <td>
+            <tr>
 
                 <td>Taiwo</td>
-                <td>Mohammed/td>
-                <td56></td>
-            </td>
+                <td>Mohammed</td>
+                <td>56</td>
+            </tr>
 
-            <td>
-
+            <tr>
                 <td>Chijioke</td>
                 <td>Epundu</td>
                 <td>30</td>
-            </td>
+            </tr>
 
-            <td>
+            <tr>
 
                 <td>Obinna</td>
                 <td>Okoro</td>
                 <td>28</td>
-            </td>
+            </tr>
 
-            <td>
+            <tr>
 
                 <td>Kafayat</td>
                 <td>Abdul</td>
                 <td>66</td>
-            </td>
+            </tr>
 
-            <td>
+            <tr>
                 <td>Nana</td>
                 <td>Michael</td>
                 <td>80</td>
-            </td>
+            </tr>
 
         </tbody>
         <tfoot></tfoot>
