--- a/table.html
+++ b/table.html
@@ -8,10 +8,11 @@
         <link rel="stylesheet" href="tablestyles.css">
 </head>
 <body>
-    <h1>list of students</h1>
+    
 
     <table>
         <thead>
+            <caption>List of Students</caption>
             <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
@@ -92,5 +93,10 @@
         </tbody>
         <tfoot></tfoot>
     </table>
+   
+    <div>
+        <a href="index.html"> <button>Home Page</button></a>
+        <a href="about.html"> <button>About us page</button></a>
+    </div>
 </body>
 </html>
