--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
                 <p>No? Then you can go on and sign up or log in.</p>
                 <button>Get Started</button>
                 <button>Sign In Now</button>
+                <a href="table.html"> <button>Table Task</button></a>
              </div>
     </section>
     
