--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <p>Done? Then create an account or login to your account.</p>
             <button>Get Started</button>
             <button>Sign in Now</button>
+            <a href="table.html"> <button>Table Task</button></a>
+
         </div>
     </section>
    
