--- a/form.html
+++ b/form.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form.html</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
  <form action=""method="post">
+<label for="username">Name: <input type="text" name="username" id="username"Enter Your Name></label>
+<label for="email">Username:<input type="email" name="email" id="email"placeholder="Enter Your Username"></label>
+<label for="">password: <input type="password" name="password" id="password"Enter Your Password></label>
+</form>
+
 </body>
 </html>
