--- a/form.html
+++ b/form.html
@@ -9,9 +9,11 @@
 </head>
 <body>
  <form action=""method="post">
-<label for="username">Name: <input type="text" name="username" id="username"Enter Your Name></label>
-<label for="email">Username:<input type="email" name="email" id="email"placeholder="Enter Your Username"></label>
-<label for="">password: <input type="password" name="password" id="password"Enter Your Password></label>
+<label for="username">Name: <input type="text" name="username" id="username"placeholder="Enter your Name"></label>
+<label for="email">Username:<input type="email" name="email" id="email"placeholder="Enter your username"></label>
+<label for="">password: <input type="password" name="password" id="password"placeholder="Enter your Password"></label>
+<label for="">Re-type Password: <input type="Re-type password" name="Re-type password"placeholder="Enter your Password"></label>
+
 </form>
 
 </body>
